# lockdown

./: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix  index.html  search-index.js  settings.html  source-files.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/prost/message/: trait.Message.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lockdown/: all.html  index.html  sidebar-items.js
lockdown/api/: index.html  sidebar-items.js
lockdown/api/harmonytypes/: enum.ActionPresentation.html  enum.ActionType.html  enum.FieldPresentation.html  enum.UserStatus.html  index.html  struct.Action.html  struct.Attachment.html  struct.Embed.html  struct.EmbedField.html  struct.EmbedHeading.html  struct.HarmonyMethodMetadata.html  struct.Message.html  struct.Metadata.html  struct.Override.html
lockdown/api/secret/: index.html  sidebar-items.js  struct.ChannelPair.html  struct.EncryptedMessage.html  struct.Fanout.html  struct.FetchKeyRequest.html  struct.FetchKeyResponse.html  struct.Flow.html  struct.Invite.html  struct.Key.html  struct.ManageStream.html  struct.Message.html  struct.PostMessageResponse.html  struct.PostedMessage.html  struct.SentMessage.html  (+3 more)
lockdown/e2ee/: enum.StreamKind.html  index.html  sidebar-items.js  struct.E2EEClient.html  trait.Impure.html
nix/: build.nix  common.nix  devShell.nix
src/: lib.rs
src/api/: mod.rs
src/e2ee/: aes.rs  error.rs  megolm.rs  mod.rs  tests.rs
src/lockdown/: lib.rs.html
(+71 files in other folders)
