[package]
name = "lockdown"
description = "Helper library for implementing E2EE Harmony"
version = "0.1.0"
authors = ["Jan Blackquill <uhhadd@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.10.1"
sha3 = "0.9.1"
ed25519-dalek = "1.0.1"
prost = "0.7"
prost-types = "0.7"
rand = "0.7"
rand_core = "0.5.1"
aes = "0.6.0"
block-modes = "0.7.0"
anyhow = "1.0"

[build-dependencies]
prost-build = { version = "0.7" }

