[package]
name = "lockdown"
description = "Helper library for implementing E2EE Harmony"
version = "0.1.0"
authors = ["Jan Blackquill <uhhadd@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
hmac = "0.10.1"
sha3 = "0.9.1"
rsa = { git = "https://github.com/RustCrypto/RSA.git", rev = "a9c5797877a94fd48a1654bdb6b72717d71f5952" }
prost = "0.7"
prost-types = "0.7"
rand = "0.7"
rand_core = "0.5.1"
aes = "0.6.0"
block-modes = "0.7.0"
anyhow = "1.0"

[build-dependencies]
prost-build = { version = "0.7" }

[profile.dev]
opt-level = 2