[package]
name = "lockdown"
description = "Helper library for implementing E2EE Harmony"
version = "0.1.0"
authors = ["Jan Blackquill <uhhadd@gmail.com>", "Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
async-trait = "0.1"
hmac = "0.10.1"
sha3 = "0.9.1"
rsa = { git = "https://github.com/RustCrypto/RSA.git", rev = "a9c5797877a94fd48a1654bdb6b72717d71f5952" }
prost = "0.7"
prost-types = "0.7"
rand = "0.7"
rand_core = "0.5.1"
aes = "0.6.0"
block-modes = "0.7.0"
log = "0.4"

[build-dependencies]
prost-build = { version = "0.7" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
env_logger = "0.8"

[profile.dev]
opt-level = 2